k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: system-info
  labels:
    app: system-info-api
