k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-info-api
  namespace: system-info
  labels:
    app: system-info-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: system-info-api
  template:
    metadata:
      labels:
        app: system-info-api
    spec:
      containers:
        - name: app
          image: alex2frisky/system-info-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000

          # resource limits so it doesn't hog the cluster
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"

          # K8s uses these to know if the pod is healthy
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 30

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
