k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: system-info-service
  namespace: system-info
  labels:
    app: system-info-api
spec:
  type: ClusterIP
  selector:
    app: system-info-api
  ports:
    - port: 80
      targetPort: 5000
